2008-08-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-user-actions.cc:
	Move gnome_cmd_file_selector_show_mkdir_dialog() to gnome-cmd-user-actions.cc

2008-08-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-collection.cc:
	* src/gnome-cmd-file-collection.h:
	* src/gnome-cmd-file-list.cc:
	Convert GnomeCmdFileCollection struct into C++ class

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-file-collection.cc:
	* src/gnome-cmd-file-collection.h:
	* src/gnome-cmd-file-list.cc:
	DeGTK+ization of GnomeCmdFileCollection

2008-08-25  Takao Fujiwara  <Takao.Fujiwara@Sun.COM>

	* src/gnome-cmd-quicksearch-popup.cc:
	* src/gnome-cmd-rename-dialog.cc:
	Fixed problem #548961 (support for input method when rename or quicksearch)

2008-08-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc: Revert bug introduced in rev. #1968

2008-08-25  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* src/gnome-cmd-user-actions.cc:
	"Synchonize Directories" -> "Synchronize Directories" (problem #548013)

2008-08-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-dir-indicator.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-mkdir-dialog.cc:
	* src/gnome-cmd-prepare-copy-dialog.cc:
	* src/gnome-cmd-prepare-move-dialog.cc:
	* src/gnome-cmd-prepare-xfer-dialog.cc:
	* src/gnome-cmd-python-plugin.cc:
	* src/gnome-cmd-rename-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	Convert GnomeCmdFileSelector struct into C++ class, part 2

	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-file-selector.h:
	GnomeCmdFileSelector: added operators for conversion to GtkWidget * and GtkBox *

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-cmdline.cc: